Implement repository pattern and HTTP caching
Refactored network and data layers to use repository pattern for cleaner architecture. Added ETag-based HTTP caching and OkHttp interceptors for improved performance. Updated dependency injection, navigation, and UI to support new architecture. Enhanced user profile, issue creation, and trending repositories with infinite scroll and robust error handling. Updated documentation and project structure for clarity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,8 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:scheme="https"
-                    android:host="your-app.com"
-                    android:path="/callback" />
+                    android:scheme="myapp"
+                    android:host="callback" />
             </intent-filter>
         </activity>
     </application>
