Add custom launcher icons and clean up UI state usage
Added adaptive and vector assets for custom launcher icons and updated AndroidManifest.xml to use them. Removed unused uiState variables from several screen composables. Fixed time formatting in ProfileScreen to use Long literals. Annotated SearchViewModel with @OptIn(FlowPreview::class) for coroutine usage.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,11 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.whm.githubapp">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:label="GitHub App"
+        android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:name=".MyApplication">
 
         <activity
